# gprMax

./: .gitignore  pyproject.toml  requirements.txt  setup.py
tests/: compare_models_to_analytical.py  test_input_cmd_funcs.py
tests/models_basic/2D_ExHyHz/: 2D_ExHyHz.out
tests/models_basic/2D_EyHxHz/: 2D_EyHxHz.out
tests/models_basic/2D_EzHxHy/: 2D_EzHxHy.out
tests/models_basic/cylinder_Ascan_2D/: cylinder_Ascan_2D.out
tests/models_basic/hertzian_dipole_dispersive/: hertzian_dipole_dispersive.out
tests/models_basic/hertzian_dipole_fs/: hertzian_dipole_fs.out
tests/models_basic/hertzian_dipole_hs/: hertzian_dipole_hs.out
tests/models_basic/magnetic_dipole_fs/: magnetic_dipole_fs.out
