[project]
name = "gprmax"
version = "3.1.7"
description = "Electromagnetic Modelling Software based on the Finite-Difference Time-Domain (FDTD) method"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.11"

dependencies = [
    "setuptools",
    "wheel",
    "colorama",
    "cython",
    "h5py",
    "jupyter",
    "matplotlib",
    "numpy",
    "psutil",
    "scipy",
    "terminaltables",
    "tqdm"
]

[build-system]
requires = ["setuptools", "numpy", "Cython", "colorama", "cython", "h5py", "jupyter", "matplotlib", "numpy", "psutil", "scipy", "terminaltables", "tqdm"]
build-backend = "setuptools.build_meta"

license = {text = "GPLv3+"}

authors = [
    {name = "Craig Warren"},
    {name = "Antonis Giannopoulos"}
]

urls = {Homepage = "http://www.gprmax.com"}

classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]


[dependency-groups]
dev = [
    "pytest>=8.3.4",
]